Feature/pdl forvalter refaktorere endepunkt (#915)
* Refaktorert med egen controllere for idenitet og eksistens
* Oppdatert med nye ca 25 endepunkter for sletting av infoelementer